--- a/LinesApp/index.html
+++ b/LinesApp/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LiNES® by Salubrity</title>
     <link rel="stylesheet" href="https://kendo.cdn.telerik.com/themes/5.9.0/default/default-main.css" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
+    <link rel="mask-icon" href="/mask-icon.svg" color="#5738C5">
+    <meta name="theme-color" content="#5738C5">
   </head>
   <body>
     <div id="app"></div>    
@@ -17,7 +20,7 @@
       script.src = reportViewerUrl;
       document.body.appendChild(script);
     </script>
-    <script src="./ReportViewer/kendo-ui-license.js"></script>
+    <script src="/ReportViewer/kendo-ui-license.js"></script>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
